--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "npm i forever -g && forever guru.js",
+      "start": "node guru.js",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
